--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="connectiondetails" class="modal"></div>
     <div id="container"></div>
-    <video id="receiving-video"></video>
+    <video id="receiving-video" autoplay></video>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 </body>
 </html>
